# azlyrics-rs

./: .gitignore  Cargo.toml  README.md
src/: README.md  client.rs  data.rs  error.rs  main.rs
