[package]
name = "azlyrics"
version = "0.1.0"
authors = ["Jonathas-Conceicao <jadoliveira@inf.ufpel.edu.br>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0-alpha.1"
awc = { version = "0.3.0-alpha.1", features = [ "openssl" ] }
derive_more = "0.99"
openssl = "0.10"
select = "0.4"
structopt = "0.2"
